src/main/java/com/example/springstudy/global/error/exception/ErrorResponse.java
package com.example.springstudy.global.error.exception;

import lombok.Builder;
import org.springframework.http.HttpStatus;

@Builder
public record ErrorResponse(HttpStatus status, String message) {
}